Pins image uploads + swagger update
